--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -12,30 +12,30 @@
 
 html,
 body {
-    height: 100%;
+  height: 100%;
 }
 
-
-
-
-// body {
-//     // font-weight: 400;
-//     // font-size: 18px;
-//     // line-height: 1.2;
-// color: $default;
-//     // letter-spacing: 0.6px;
-// }
+body {
+  background-color: #CCCCCC;
+  color: #000000;
+  font-family: Arial;
+  font-weight: normal;
+  font-size: 13px;
+  line-height: 1.1875;
+  margin: 0;
+  // text-align: center;
+}
 
 .sr-only {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    white-space: nowrap;
-    border: 0;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
 }
 
 /*
@@ -44,75 +44,76 @@ body {
 }*/
 
 .main {
-    flex-grow: 1;
+  flex-grow: 1;
 }
 
 .container {
-    max-width: 970px;
-    margin: 0 auto;
-    padding: 0 15px;
+  max-width: 970px;
+  margin: 0 auto;
+  padding: 0 15px;
 }
 
 .svg {
-    margin-right: 5px;
+  margin-right: 5px;
 }
 
 .title {
-    // font-size: 36px;
-    // text-align: center;
-    // letter-spacing: 0.04em;
-    // text-transform: uppercase;
-    // color: $black3;
+  // font-size: 36px;
+  // text-align: center;
+  // letter-spacing: 0.04em;
+  // text-transform: uppercase;
+  // color: $black3;
 
-    // @media (max-width: 1200px) {
-    //     font-size: 34px;
-    // }
+  // @media (max-width: 1200px) {
+  //     font-size: 34px;
+  // }
 
-    // @media (max-width: 992px) {
-    //     font-size: 32px;
-    // }
+  // @media (max-width: 992px) {
+  //     font-size: 32px;
+  // }
 
-    // @media (max-width: 768px) {
-    //     font-size: 30px;
-    // }
+  // @media (max-width: 768px) {
+  //     font-size: 30px;
+  // }
 
-    // @media (max-width: 576px) {
-    //     font-size: 26px;
-    // }
+  // @media (max-width: 576px) {
+  //     font-size: 26px;
+  // }
 }
 
 .section {
-    @include adaptiveValue("padding-top", 100, 65);
-    @include adaptiveValue("padding-bottom", 100, 65);
+  // @include adaptiveValue("padding-top", 100, 65);
+  // @include adaptiveValue("padding-bottom", 100, 65);
+  padding: 30px;
 }
 
 .logo {
 
-    &__header {
-        width: 315px;
-        height: 80px;
-        object-fit: cover;
-    }
+  &__header {
+    width: 315px;
+    height: 80px;
+    object-fit: cover;
+  }
 }
 
 .btn {
-    border: 2px solid white;
-    background-color: white;
+  border: 2px solid white;
+  background-color: white;
+  color: $white;
+  transition: background-color 0.5s;
+
+  &:focus {
+    color: $focus;
+  }
+
+  &:hover {
+    background-color: $white;
     color: $white;
-    transition: background-color 0.5s;
+  }
 
-    &:focus {
-        color: $focus;
-    }
-
-    &:hover {
-        background-color: $white;
-        color: $white;
-    }
-
-    &:active {
-        color: $active;
-    }
+  &:active {
+    color: $active;
+  }
 }
 
 // .video {
@@ -165,9 +166,9 @@ body {
 // }
 
 * {
-    // scrollbar-width: auto;
-    scrollbar-color: #C0C0C0 #EFEFF1;
-    //для потдержки скрола в фарфокс
+  // scrollbar-width: auto;
+  scrollbar-color: #C0C0C0 #EFEFF1;
+  //для потдержки скрола в фарфокс
 }
 
 // footer__link--indent
